# llvm-pass-skeleton

./: .gitignore  CMakeLists.txt  README.md  SVsite.json  TinyWebServer_SVsite.json  WebServer_SVsite.json  build.sh  create_ir_webserver.sh  line_value.json  linux.toolchain.cmake  result.txt  run.sh  run_demo.sh  run_demo_archive.sh  run_demo_injectFuncCall.sh  run_demo_ll.sh  run_ll.sh  run_tiny.sh  run_tiny2.sh  run_tiny3.sh  run_tiny3_copy.sh  run_tiny4.sh  run_webserver.sh  run_whole.sh  test.py  test_after_run.sh
TinyWebServer/: CMakeLists.txt  build.sh  config.cpp  main.cpp  makefile  server  test.py  test_meng.py
TinyWebServer/http/: http_conn.cpp
WebServer/: .gitignore  CMakeLists.txt  build.sh  create_ir.sh  print_file_name.sh  test.py  test_conn.sh  webserver  webserver_method_invoke_info.txt
WebServer/WebServer/: EventLoop.cpp  Main.cpp
WebServer/WebServer/tests/: HTTPClient  HTTPClient.cpp
input/test/: file.txt  test  test.cpp  test_fprintf.cpp
instrument/: CMakeLists.txt  SVsite.json  SVsite_old.json  file_variable_line.json  line_value.json  read_json.cpp  results.txt  rtlib.cpp  run_whole.sh  test  test.cpp
jsonutil/: CMakeLists.txt  json_util.cpp
jsonutil/include/: json.h  json_util.h
jsonutil/src/: json_util.cpp
output/: 2022_06_21_ServerLog  results.txt
readjson/: CMakeLists.txt  json_util.cpp  read_json.cpp
readjson/include/: json_util.h  read_json.h
readjson_old/: CMakeLists.txt  read_json.cpp  read_json.h
runtimelib/: CMakeLists.txt  rtlib.cpp
runtimelib/include/: rtlib.h
runtimelib/src/: rtlib.cpp
scripts/: create_ir_tinywebserver.sh  create_ir_webserver.sh  run_demo.sh  run_demo_archive.sh  run_tinywebserver.sh  run_webserver.sh  test_after_run.sh  test_tinywebserver.sh  test_webserver.sh
skeleton/: CMakeLists.txt  CMakeLists4skeleton_pass.txt  CMakeLists_normal.txt  Skeleton demo archive.cpp  Skeleton-archive.cpp  Skeleton.cpp  SkeletonModulePass.cpp  ValueTrace.cpp  skeleton_pass.cpp
skeleton/include/: InjectFuncCall.h  skeleton.h
skeleton/readjson/: read_json.cpp  read_json.h
skeleton/readjson/include/: json-forwards.h  read_json.h
skeleton/src/: InjectFuncCall.cpp  skeleton.cpp
src/: CMakeLists.txt  demo  demo.cpp  rtlib.cpp  test0add.cpp  test1cout.cpp  test1float.cpp  test1str.cpp
src/TinyWebServer/: server
src/TinyWebServer/http/: http_conn.cpp
test/: demo.cpp  demo.ll
